# palladio

conan/houdini/: conanfile.py
doc/: changelog.md
src/: CMakeLists.txt  conanfile.py  conanfile.txt  dependencies.cmake  platform.cmake
src/codec/: CMakeLists.txt  conanfile.py
src/codec/encoder/: HoudiniEncoder.cpp
src/palladio/: CMakeLists.txt  ModelConverter.cpp  ShapeConverter.cpp  ShapeConverter.h
